RESOLVED FIXED217850
[WinCairo] sluggish page scrolling for wheel events since r268499
https://bugs.webkit.org/show_bug.cgi?id=217850
Summary [WinCairo] sluggish page scrolling for wheel events since r268499
Fujii Hironori
Reported 2020-10-16 15:20:57 PDT
[WinCairo] sluggish page scrolling even in non-AC mode 1. Start WinCairo MiniBrowser 2. Go to https://trac.webkit.org/wiki 3. scroll down by mouse wheel r267199 (with WebKitRequirements v2020.08.20): smooth scrolling r268564 (with WebKitRequirements v2020.10.04): sluggish scrolling
Attachments
Patch (1.75 KB, patch)
2020-10-18 13:58 PDT, Fujii Hironori
no flags
Simon Fraser (smfr)
Comment 1 2020-10-16 19:44:59 PDT
Test around r268287, r268417, r268476, r268499.
Fujii Hironori
Comment 2 2020-10-18 13:08:56 PDT
It's a very useful information for bisecting. Thank you. r268498 : smooth scrolling r268499 : sluggish scrolling This issue has been started since r268499.
Fujii Hironori
Comment 3 2020-10-18 13:58:05 PDT
Fujii Hironori
Comment 4 2020-10-18 13:59:05 PDT
I don't understand this change, but I confirmed this patch fixes the WinCairo issue.
Fujii Hironori
Comment 5 2020-10-18 22:18:43 PDT
Comment on attachment 411718 [details] Patch Clearing flags on attachment: 411718 Committed r268664: <https://trac.webkit.org/changeset/268664>
Fujii Hironori
Comment 6 2020-10-18 22:18:46 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 7 2020-10-18 22:19:18 PDT
Note You need to log in before you can comment on or make changes to this bug.