[WinCairo] sluggish page scrolling for wheel events since r268499 https://bugs.webkit.org/show_bug.cgi?id=217850

Reviewed by Simon Fraser.

* WebProcess/WebPage/EventDispatcher.cpp:
(WebKit::EventDispatcher::wheelEvent): Include
WheelEventProcessingSteps::MainThreadForScrolling to
processingSteps for !ENABLE(SCROLLING_THREAD).

Canonical link: https://commits.webkit.org/230622@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@268664 268f45cc-cd09-0410-ab3c-d52691b4dbfc